--- a/WinUI3Sample/Views/MainPage.xaml
+++ b/WinUI3Sample/Views/MainPage.xaml
@@ -6,7 +6,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        
+    <Grid x:Name="ContentArea" >
+        <StackPanel>
+            <TextBlock Text="{Binding MyName}"  />
+        </StackPanel>
     </Grid>
 </Page>
