--- a/WinUI3Sample/Views/MainPage.xaml
+++ b/WinUI3Sample/Views/MainPage.xaml
@@ -3,10 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:models="using:WinUI3Sample.Models" d:DataContext="{d:DesignInstance Type=models:KSAppData}"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea" >
+    <Grid x:Name="ContentArea">
         <StackPanel>
             <TextBlock Text="{Binding MyName}"  />
         </StackPanel>
